err/py-sysadmin.err
Listing '.'...
Listing './bin'...
Compiling './bin/gen-factory-settings.py'...
Compiling './bin/migrate.py'...
Compiling './bin/templater.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/google'...
Listing './lib/python3.5/site-packages/google/protobuf'...
Listing './lib/python3.5/site-packages/google/protobuf/compiler'...
Listing './lib/python3.5/site-packages/google/protobuf/internal'...
Listing './lib/python3.5/site-packages/google/protobuf/internal/import_test_package'...
Listing './lib/python3.5/site-packages/google/protobuf/pyext'...
Listing './lib/python3.5/site-packages/google/protobuf/util'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/protobuf-3.5.1.dist-info'...
Listing './lib/python3.5/site-packages/py_sysadmin-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sysadmin'...
Listing './lib/python3.5/site-packages/sysadmin/generated'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
